BUG FIXED, Z-INDEX PROBLEM IN FOCUSING ITEM MENUgit add .git add .

--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -123,6 +123,7 @@ p {
   }
 
   .nav-sections {
+    user-select: none;
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
@@ -186,6 +187,8 @@ p {
             background: rgb(255, 255, 255);
             border-radius: 4px;
             padding: 0.5rem;
+            position: relative;
+            z-index: 12;
 
             > li {
               padding: 6px 8px;
@@ -222,7 +225,7 @@ p {
         }
 
         &:focus {
-          box-shadow: 0 0 0 0.100rem #0f2027de;
+          box-shadow: 0 0 0 0.1rem #0f2027de;
           .nav-item-submenu {
             display: block;
           }
@@ -239,6 +242,7 @@ p {
 
       &:active {
         transform: scale(0.97);
+        z-index: 1;
       }
     }
   }
